--- a/estilo/evento.css
+++ b/estilo/evento.css
@@ -31,7 +31,6 @@ ul li:first-child {
 .contenedor {
     width: 100%;
     margin-top: 20px;
-    display:none;
 }
 .salir {
     float: right;
@@ -49,7 +48,6 @@ ul li:first-child {
     display: table;
     padding: 20px;
     margin: auto;
-    background-color: #B2BDDE;
 }
 .contenedor h1 {
     text-align: center;
@@ -78,6 +76,15 @@ ul li:first-child {
 .datosPersonales li {
     float: left;
     width: 16.6%;
+}
+.datosPersonales li:nth-child(4){
+    width: 16.6%;
+}
+.datosPersonales li:nth-child(5){
+    width: 8.6%;
+}
+.datosPersonales li:nth-child(6){
+    width: 24.6%;
 }
 .ubicacion {
     clear: both;
