--- a/estilo/evento.css
+++ b/estilo/evento.css
@@ -10,6 +10,7 @@ html {
 body {
     width: 100%;
     height: 100%;
+    background-color: #E7F6EF;
 }
 ul {
     padding: 10px;
@@ -27,7 +28,7 @@ ul li:first-child {
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: #D6A5BB;
+    background-color: #6BDCA7;
 }
 .contenedor {
     width: 100%;
@@ -36,6 +37,13 @@ ul li:first-child {
     top: 0;
     display: table;
     background-color: rgba(1,1,1,0.7);
+}
+.aVolver h4 {
+    padding: 20px 20px;
+    text-decoration: none;
+    background-color: #13F98D;
+    color: black;
+    margin-top: 20px;
 }
 .salir {
     float: right;
