--- a/estilo/inicio.css
+++ b/estilo/inicio.css
@@ -10,6 +10,18 @@
     margin: 0;
 }
 
+body {
+    font-size: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #E7F6EF;
+    text-align: center;
+}
+
+body img {
+    margin-top: 100px;
+}
+
 .clearfix:after {
     content: "";
     display: table;
@@ -19,7 +31,7 @@
 .form-2 {
     /* Size and position */
     width: 500px;
-    margin: 200px auto 30px;
+    margin: 50px auto 30px;
     padding: 15px;
     position: relative;
 
