--- a/estilo/menuEventos.css
+++ b/estilo/menuEventos.css
@@ -11,6 +11,8 @@ body {
     font-size: 100%;
     width: 100%;
     height: 100%;
+    background-color: #E7F6EF;
+    text-align: center;
 }
 a {
     text-decoration: none;
@@ -223,6 +225,13 @@ span {
     border: 1px solid black;
     cursor: pointer;
     margin: 3px;
+    background-color: #6BDCA7;
+}
+#menuAdmin ul li:hover {
+    background-color: #13F98D;
+}
+#menuAdmin li a {
+    color: black;
 }
 
 .volver {
@@ -242,4 +251,8 @@ span {
 .mensaje input[type=button] {
     padding: 10px 20px;
     cursor: pointer;
+}
+img {
+    text-align: center;
+    margin-top: 50px;
 }
